--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,21 @@
 ﻿# CMakeList.txt : CMake project for msgpack-visitor, include source and define
 # project specific logic here.
 #
-cmake_minimum_required (VERSION 3.8)
-
-# Enable Hot Reload for MSVC compilers if supported.
-if (POLICY CMP0141)
-  cmake_policy(SET CMP0141 NEW)
-  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
-endif()
+cmake_minimum_required (VERSION 3.23)
 
 project ("msgpack-visitor")
+
+find_package(msgpack-cxx REQUIRED)
+
+
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 
 # Add source to this project's executable.
 add_executable (msgpack-visitor "msgpack-visitor.cpp" )
 
-if (CMAKE_VERSION VERSION_GREATER 3.12)
-  set_property(TARGET msgpack-visitor PROPERTY CXX_STANDARD 20)
-endif()
-
-# TODO: Add tests and install targets if needed.
+target_link_libraries(msgpack-visitor
+	PRIVATE msgpack-cxx
+)
